feat: api RecordAPIHit
